<resources>
    <string name="app_name">bruno-lipovac-rma</string>
    <string name="password">password</string>
    <string name="contained_button">Contained button</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">password confirmation</string>
    <string name="package_sender">Package Sender</string>
    <string name="package_courier">Package Courier</string>
    <string name="pickup_address">Package Pickup Address</string>
    <string name="delivery_address">Package Delivery Address</string>
    <string name="delivery_note">Additional Delivery Note</string>
    <string name="delivery_notes">Delivery Notes:</string>
    <string name="post_delivery">Post Delivery</string>
    <string name="show_map_text" />
    <string name="available_deliveries">Available Deliveries:</string>
    <string name="fab_content_desc">Button to accept or reject a delivery</string>
    <string name="additional_delivery_information">Additional Delivery Information</string>
    <string name="delivery_details">Delivery Details:</string>
    <string name="enter_details_of_your_delivery">Enter details of your delivery:</string>
    <string name="enter_package_pickup_address">Enter package pickup address:</string>
    <string name="enter_package_delivery_address">Enter package delivery address:</string>
    <string name="enter_your_user_information">Enter your user information:</string>
    <string name="sign_out">Sign Out</string>
</resources>